--- a/classes_notebook.ipynb
+++ b/classes_notebook.ipynb
@@ -29,46 +29,7 @@
     "            self.chronon_count_reproduction = 0\n",
     "\n",
     "    #def radar cases voisines\n",
-    "\n",
-    "    for case in grid:\n",
-    "        if Sprite in case:\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[True, False, True]\n",
-      "[False, False, False]\n",
-      "[False, True, False]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import random \n",
-    "\n",
-    "taille_grille = 3\n",
-    "grille = [[False for _ in range(taille_grille)] for _ in range(taille_grille)]\n",
-    "\n",
-    "# Placez trois poissons aléatoirement dans la grille\n",
-    "for _ in range(3):\n",
-    "    ligne = random.randint(0, taille_grille - 1)\n",
-    "    colonne = random.randint(0, taille_grille - 1)\n",
-    "    while grille[ligne][colonne]:\n",
-    "        # Répétez tant que la case choisie contient déjà un poisson\n",
-    "        ligne = random.randint(0, taille_grille - 1)\n",
-    "        colonne = random.randint(0, taille_grille - 1)\n",
-    "    grille[ligne][colonne] = True\n",
-    "\n",
-    "# Affiche la grille\n",
-    "for ligne in grille:\n",
-    "    print(ligne)\n"
    ]
   },
   {
@@ -159,6 +120,94 @@
    "outputs": [],
    "source": [
     "class DeplacementsRequins(Requins):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/home/utilisateur/Documents/projets/projet-wator/Wa-tor/classes_notebook.ipynb Cell 6\u001b[0m line \u001b[0;36m6\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/utilisateur/Documents/projets/projet-wator/Wa-tor/classes_notebook.ipynb#X13sZmlsZQ%3D%3D?line=59'>60</a>\u001b[0m     tous_sprites\u001b[39m.\u001b[39mupdate()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/utilisateur/Documents/projets/projet-wator/Wa-tor/classes_notebook.ipynb#X13sZmlsZQ%3D%3D?line=60'>61</a>\u001b[0m     tous_sprites\u001b[39m.\u001b[39mdraw(fenetre)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/utilisateur/Documents/projets/projet-wator/Wa-tor/classes_notebook.ipynb#X13sZmlsZQ%3D%3D?line=62'>63</a>\u001b[0m     pygame\u001b[39m.\u001b[39;49mdisplay\u001b[39m.\u001b[39;49mupdate()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/utilisateur/Documents/projets/projet-wator/Wa-tor/classes_notebook.ipynb#X13sZmlsZQ%3D%3D?line=64'>65</a>\u001b[0m \u001b[39m# Quitter Pygame\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/utilisateur/Documents/projets/projet-wator/Wa-tor/classes_notebook.ipynb#X13sZmlsZQ%3D%3D?line=65'>66</a>\u001b[0m pygame\u001b[39m.\u001b[39mquit()\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "import pygame\n",
+    "import sys\n",
+    "\n",
+    "\n",
+    "class Poisson(pygame.sprite.Sprite):\n",
+    "    def __init__(self, x, y):\n",
+    "        super().__init__()\n",
+    "        self.image = pygame.image.load('img/poisson (1).png')\n",
+    "        self.rect = self.image.get_rect()\n",
+    "        self.rect.x = x\n",
+    "        self.rect.y = y\n",
+    "\n",
+    "# class Requin(Poisson):\n",
+    "#     def __init__(self, x, y):\n",
+    "#         super().__init__(x, y)  # Assurez-vous de passer x et y au constructeur de la classe mère\n",
+    "#         self.image = pygame.image.load('img/poisson.png')\n",
+    "#         self.rect = self.image.get_rect()\n",
+    "\n",
+    "# Initialisation de Pygame\n",
+    "pygame.init()\n",
+    "\n",
+    "# Taille de la fenêtre\n",
+    "largeur, hauteur = 1500, 1000\n",
+    "taille_case = largeur // 15\n",
+    "\n",
+    "# Création de la fenêtre\n",
+    "fenetre = pygame.display.set_mode((largeur, hauteur))\n",
+    "\n",
+    "# Couleurs\n",
+    "blanc = (255, 255, 255)\n",
+    "noir = (0, 0, 0)\n",
+    "\n",
+    "# Groupes de sprite\n",
+    "tous_sprites = pygame.sprite.Group()\n",
+    "\n",
+    "\n",
+    "# Position de la case pour les poissons\n",
+    "positions_poissons = [(0, 1), (3, 5), (6, 8), (1, -1)]  # Exemple : positionnez 3 poissons à différentes positions\n",
+    "\n",
+    "for x_case, y_case in positions_poissons:\n",
+    "    poisson = Poisson(x_case * taille_case, y_case * taille_case)\n",
+    "    tous_sprites.add(poisson)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "running = True\n",
+    "while running:\n",
+    "    for event in pygame.event.get():\n",
+    "        if event.type == pygame.QUIT:\n",
+    "            running = False\n",
+    "\n",
+    "    fenetre.fill(blanc)\n",
+    "\n",
+    "    for x in range(0, largeur, taille_case):\n",
+    "        pygame.draw.line(fenetre, noir, (x, 0), (x, hauteur))\n",
+    "    for y in range(0, hauteur, taille_case):\n",
+    "        pygame.draw.line(fenetre, noir, (0, y), (largeur, y))\n",
+    "\n",
+    "    tous_sprites.update()\n",
+    "    tous_sprites.draw(fenetre)\n",
+    "\n",
+    "    pygame.display.update()\n",
+    "\n",
+    "# Quitter Pygame\n",
+    "pygame.quit()\n",
+    "sys.exit()\n",
+    "\n"
    ]
   }
  ],
