sauvegarde test_grille_tibo

--- a/classes_notebook.ipynb
+++ b/classes_notebook.ipynb
@@ -218,6 +218,70 @@
     "sys.exit()\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 100, 200, 300, 400, 500, 600, 700, 800, 900, 1000]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coordinates = [i for i in range(0, 1001, 100)]\n",
+    "coordinates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "0.0002617835998535156\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "\n",
+    "start = time.time()\n",
+    "for i in range(0,20):\n",
+    "    print(i)\n",
+    "now = time.time()\n",
+    "print(now-start)"
+   ]
   }
  ],
  "metadata": {
